boost header files correctly included, need to clean up .swp files and CMakelists for vesc_drive

--- a/dubcar_ws/src/vesc_driver/CMakeLists.txt
+++ b/dubcar_ws/src/vesc_driver/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 ## System dependencies are found with CMake's conventions
-find_package(Boost REQUIRED COMPONENTS CRC)
+#find_package(Boost REQUIRED COMPONENTS CRC)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
