now builds correctly

--- a/dubcar_ws/src/vesc_driver/CMakeLists.txt
+++ b/dubcar_ws/src/vesc_driver/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-std=c++11)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   serial
+  roscpp
 )
 
 ## System dependencies are found with CMake's conventions
@@ -106,7 +107,7 @@ find_package(GTest REQUIRED)
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES vesc_driver
-  CATKIN_DEPENDS serial
+  CATKIN_DEPENDS serial roscpp
   #  DEPENDS system_lib
 )
 
@@ -137,8 +138,8 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/vesc_driver_node.cpp)
-add_executable(${PROJECT_NAME}_node src/vesc_driver.cpp src/vesc_interface.cpp src/vesc_packet.cpp)
+add_executable(${PROJECT_NAME}_node src/vesc_driver_node.cpp)
+##add_executable(${PROJECT_NAME}_node src/vesc_driver_node.cpp src/vesc_driver.cpp src/vesc_interface.cpp src/vesc_packet.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -148,7 +149,7 @@ add_executable(${PROJECT_NAME}_node src/vesc_driver.cpp src/vesc_interface.cpp s
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
