--- a/dubcar_ws/src/vesc_driver/package.xml
+++ b/dubcar_ws/src/vesc_driver/package.xml
@@ -38,10 +38,12 @@
   <!-- Use run_depend for packages you need at runtime: -->
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
+  <test_depend>gtest</test_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>serial</build_depend>
+  <build_depend>roscpp</build_depend>
   <run_depend>serial</run_depend>
+  <run_depend>roscpp</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
