--- a/server/static/package.json
+++ b/server/static/package.json
@@ -20,6 +20,8 @@
     "watchify": "^3.9.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
